# ampy-proto

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README_ampy-proto.md  ampy.go  buf.gen.yaml  buf.gen.yaml.bak  go.mod  go.sum  pyproject.toml  requirements.txt  smoke_test  test-cpp-build.sh  test_proto_validation.go
.github/workflows/: buf.yml  release.yml
examples/cpp/: CMakeLists.txt  smoke.cpp
examples/go/smoke/: main.go
examples/python/: smoke.py
pkg/ampy/: ampy.go
proto/: buf.yaml
proto/ampy/bars/v1/: bars.proto
proto/ampy/common/v1/: common.proto
proto/ampy/corporate_actions/v1/: corporate_actions.proto
proto/ampy/fills/v1/: fills.proto
proto/ampy/fundamentals/v1/: fundamentals.proto
proto/ampy/fx/v1/: fx.proto
proto/ampy/metrics/v1/: metrics.proto
proto/ampy/news/v1/: news.proto
proto/ampy/orders/v1/: orders.proto
proto/ampy/positions/v1/: positions.proto
proto/ampy/signals/v1/: signals.proto
proto/ampy/ticks/v1/: ticks.proto
proto/ampy/universe/v1/: universe.proto
samples/bars/: typical.json
samples/corporate_actions/: split_typical.json
samples/fills/: partial_typical.json
samples/fundamentals/: typical.json
samples/fx/: typical.json
samples/metrics/: typical.json
samples/news/: typical.json
samples/orders/: limit_typical.json
samples/positions/: typical.json
samples/signals/: alpha_typical.json
samples/ticks/: trade_typical.json
samples/universe/: typical.json
tests/roundtrip/: python_roundtrip.py
